deployment/03-nginxssl/configurationSSLNginxIngress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: computersof80s-nginxingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
      - cpc464.51-138-222-122.nip.io
      secretName: cpc464-web-cert
  rules:
  - host: cpc464.51-138-222-122.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: cip-amstradcpc464
          servicePort: 80
  # - host: c64.51-138-222-122.nip.io
  #   http:
  #     paths:
  #     - path: /
  #       backend:
  #         serviceName: cip-commodore64
  #         servicePort: 80
  # - host: amiga.51-138-222-122.nip.io
  #   http:
  #     paths:
  #     - path: /
  #       backend:
  #         serviceName: cip-amiga
  #         servicePort: 80
  #       path: /
  # - host: atarist.51-138-222-122.nip.io
  #   http:
  #     paths:
  #     - path: /
  #       backend:
  #         serviceName: cip-atarist
  #         servicePort: 80
  # - host: squale.51-138-222-122.nip.io
  #   http:
  #     paths:
  #     - path: /      
  #       backend:
  #         serviceName: cip-squale
  #         servicePort: 80
